@@ -45,9 +45,12 @@
             "Carp" : "0",
             "Encode" : "0",
             "Exporter" : "5.57",
+            "File::Basename" : "0",
             "File::Temp" : "0",
+            "Getopt::Long" : "0",
             "IO::Handle" : "0",
             "JSON::PP" : "0",
+            "Sys::Hostname" : "0",
             "Time::Local" : "0",
             "constant" : "0",
             "perl" : "5.008001"
@@ -68,7 +71,7 @@
    "provides" : {
       "CGI::Tiny" : {
          "file" : "lib/CGI/Tiny.pm",
-         "version" : "0.014"
+         "version" : "0.015"
       }
    },
    "release_status" : "stable",
@@ -83,7 +86,7 @@
          "web" : "https://github.com/Grinnz/CGI-Tiny"
       }
    },
-   "version" : "0.014",
+   "version" : "0.015",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>"
    ],
