@@ -20,9 +20,12 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "Encode" => 0,
     "Exporter" => "5.57",
+    "File::Basename" => 0,
     "File::Temp" => 0,
+    "Getopt::Long" => 0,
     "IO::Handle" => 0,
     "JSON::PP" => 0,
+    "Sys::Hostname" => 0,
     "Time::Local" => 0,
     "constant" => 0
   },
@@ -32,7 +35,7 @@ my %WriteMakefileArgs = (
     "MIME::Base64" => 0,
     "Test::More" => "0.96"
   },
-  "VERSION" => "0.014",
+  "VERSION" => "0.015",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -44,11 +47,14 @@ my %FallbackPrereqs = (
   "Encode" => 0,
   "Exporter" => "5.57",
   "ExtUtils::MakeMaker" => 0,
+  "File::Basename" => 0,
   "File::Spec" => 0,
   "File::Temp" => 0,
+  "Getopt::Long" => 0,
   "IO::Handle" => 0,
   "JSON::PP" => 0,
   "MIME::Base64" => 0,
+  "Sys::Hostname" => 0,
   "Test::More" => "0.96",
   "Time::Local" => 0,
   "constant" => 0
